# qgroundcontrol

./: .gitignore  CMakeLists.txt  CMakeLists.txt.orig  VGMInfo.qml  qgcimages.qrc  qgcresources.qrc  qgroundcontrol.qrc
.github/workflows/: android-linux.yml  android.yml  android.yml.bak  android.yml.orig  build-gstreamer.yml.bak  build-gstreamer.yml.orig  custom-build.yml  docker.yml  docker.yml.orig  ios.yml  linux.yml  linux.yml.orig  linux_on_dispatch.yml  linux_release.yml  macos.yml  macos.yml.bak  macos.yml.orig  mirror-gstreamer.yml.bak  windows.yml  windows.yml.bak  windows.yml.orig  workflow_on_dispatch.yml
cmake/: CustomOptions.cmake  CustomOptions.cmake.orig
cmake/install/: CreateAppImage.cmake  CreateMacDMG.cmake  CreateWinInstaller.cmake  Install.cmake
custom/: CMakeLists.txt  custom.qrc  qgroundcontrol.qrc
custom/cmake/: CustomOverrides.cmake
custom/src/: CustomPlugin.cc  FoxFourPlugin.cc  FoxFourPlugin.h
deploy/docker/: variants.json
deploy/linux/: org.mavlink.qgroundcontrol.appdata.xml.in
deploy/macos/: MacOSXBundleInfo.plist.in
deploy/windows/: nullsoft_installer.nsi
resources/icons/: f4macx.icns
src/: CMakeLists.txt  QGCApplication.cc
src/Auth/: CMakeLists.txt  OpenIDAuthManager.cpp  OpenIDAuthManager.h  UavModelDecryptionManager.h  UavModelDectyptionManager.cpp  YubiKeyECDF.cpp  YubiKeyECDF.h
src/Camera/: QGCCameraControl.cc  QGCCameraControl.h  QGCVideoStreamInfo.cc  VehicleCameraControl.cc
src/FactSystem/: FactMetaData.h  ParameterManager.cc  ParameterManager.cc.orig  (+1 more)
test/: CMakeLists.txt.orig  UnitTestList.cc.orig
(+169 files in other folders)
